pnp 0.016: modals are no longer weird, use modal over prompt(), add >spellcheck, add >filetype, more helper functions, fix >web >open and other weird issues, fix >replace not jojining by spaces, reorder >help message to be more useful and highlight nonnative commands, >name is now >filename with >name as a synonym, file type and program name can now be specified for customization, modal is now visible on chromebooks; spp 1.6.17: esc to close modals, begin work on trying not to repeat myself (tired me bullshit code), accessibility

--- a/things/searchpluspremium/style.css
+++ b/things/searchpluspremium/style.css
@@ -254,7 +254,7 @@ form {
             flex: 1;
             transition: 0.2s all;
             &:focus-within {
-                flex: 2;
+                flex: 1.5;
             }
         }
         &.topborder {
@@ -633,6 +633,20 @@ thead {
     &:focus-within {
         top: auto;
         transform: translate(-120%,32px);
+        position: unset;
+    }
+}
+
+.searchtools .oh:has(button) {
+    flex: 0.1;
+    &:active,&:focus-within {
+        flex: 0.2;
+    }
+}
+.searchtools .oh:has(input) {
+    flex: 1;
+    &:active,&:focus-within {
+        flex: 1.25;
     }
 }
 
